the ruler wil crash bender if show overlays is set to false #59210

Closed
opened 2018-12-11 21:29:10 +01:00 by Arie van den berg · 5 comments

System Information
Operating system: Linux Mint 18.3 64 bit i7-7700K CPU
Graphics card: GTX 1080 Ti

Blender Version
Broken:
Blender 2.80 (sub 37), Commit date: 2018-12-11 19:46, Hash 73b19bf
Worked: (optional)

if you use the ruler to measure an object with overlay.show_overlays = False blender wil crash.

Exact steps for others to reproduce the error
Open blender set overlay.show_overlays to False and use the ruler

**System Information** Operating system: Linux Mint 18.3 64 bit i7-7700K CPU Graphics card: GTX 1080 Ti **Blender Version** Broken: Blender 2.80 (sub 37), Commit date: 2018-12-11 19:46, Hash 73b19bf Worked: (optional) if you use the ruler to measure an object with overlay.show_overlays = False blender wil crash. **Exact steps for others to reproduce the error** Open blender set overlay.show_overlays to False and use the ruler

Added subscriber: @ArievandenBerg

Added subscriber: @ArievandenBerg

#59204 was marked as duplicate of this issue

#59204 was marked as duplicate of this issue

This issue was referenced by 174acd9ca3

This issue was referenced by 174acd9ca376a4fb0e4a50d27359ee5f8ac7f3fe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @HenriqueGonzaga

Added subscriber: @HenriqueGonzaga
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59210
No description provided.