Fix T59210: Measure tool crash w/o overlays/gizmos